# raifpay

./: README.md  pyproject.toml  requirements.txt  setup.py
raifpay/: __init__.py  __version__.py
raifpay/errors/: base.py  enums.py
raifpay/models/: base.py
raifpay/models/sbp/: banks.py  payments.py  qr.py  subscribe.py  variable.py
raifpay/modules/: core.py  module.py
raifpay/modules/sbp/: core.py  payments.py  qr.py  subscribe.py  variable.py  webhook.py
tests/: conftest.py
tests/sbp_tests/: conftest.py  test_qr.py
