[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raifpay"
dynamic = ["version"]
description = "RaifPay wrapper"
readme = "README.md"
license = "Mozilla Public License 2.0"
authors = [
    { name = "WhiteApfel", email = "white@pfel.ru" },
]
keywords = [
    "api",
    "bank",
    "raiffeisen",
    "raiffeisenbank",
    "raifpay",
    "business",
    "СБП",
    "SBP",
    "FPS",
]
dependencies = [
    "httpx~=0.25.2",
    "pydantic~=2.5.2",
    "ujson~=5.9.0",
    "uuid~=1.30",
]

[project.urls]
Homepage = "https://github.com/WhiteApfel/raifpay"
Repository = "https://github.com/tiangolo/fastapi"
Telegram = "https://t.me/whiteapfel"

[pytest]
asyncio_mode = "auto"

[tool.hatch.version]
path = "raifpay/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/raifpay",
]

[tool.ruff]
fix = true
preview = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
known-third-party = []

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
